Add Navigation Bar Title

--- a/iDracoMobile/Base.lproj/Main.storyboard
+++ b/iDracoMobile/Base.lproj/Main.storyboard
@@ -171,14 +171,18 @@
             </objects>
             <point key="canvasLocation" x="1217" y="1255"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Custom Navigation Controller-->
         <scene sceneID="RJH-Ng-3oB">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1GI-lt-RiT" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1GI-lt-RiT" customClass="CustomNavigationController" customModule="iDracoMobile" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="grc-Ep-aE0">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="18"/>
+                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
